sre-autoscaling-observability/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-app
  labels:
    app: sre-autoscaling
    monitoring: "true"
