sre-autoscaling-observability/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-app-svc
  namespace: sre-app
  labels:
    app: sre-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5000"
spec:
  selector:
    app: sre-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
